# SungemSDK-ROS

./: .gitmodules  Readme.md  readme.md
object_msgs/: CMakeLists.txt  package.xml
object_msgs/msg/: Object.msg  ObjectInBox.msg  Objects.msg
ros_horned_sungem/horned_sungem_example/: package.xml
ros_horned_sungem/horned_sungem_example/src/: stream_detection.cpp
ros_horned_sungem/horned_sungem_launch/: package.xml
ros_horned_sungem/horned_sungem_launch/config/: alexnet.yaml  inception_v2.yaml  mobilenet.yaml  mobilenetssd.yaml
ros_horned_sungem/horned_sungem_launch/launch/: hs_camera.launch  hs_detection_example.launch
ros_horned_sungem/horned_sungem_launch/launch/includes/: hs_stream_classification.launch  hs_stream_detection.launch
ros_horned_sungem/horned_sungem_lib/: CMakeLists.txt
ros_horned_sungem/horned_sungem_lib/include/horned_sungem_lib/: connect.h  device.h  exception.h  exception_util.h  hs_manager.h
ros_horned_sungem/horned_sungem_lib/src/: device.cpp  exception.cpp  hs_manager.cpp  tensor.cpp
ros_horned_sungem/horned_sungem_stream/: CMakeLists.txt
ros_horned_sungem/horned_sungem_stream/include/horned_sungem_stream/: hs_nodelet.h
src/object_msgs/msg/: ObjectsInBoxes.msg
src/ros_horned_sungem/horned_sungem_example/: CMakeLists.txt
src/ros_horned_sungem/horned_sungem_example/src/: stream_classification.cpp
src/ros_horned_sungem/horned_sungem_launch/: CMakeLists.txt
src/ros_horned_sungem/horned_sungem_launch/config/: googlenet.yaml  inception_v1.yaml  inception_v3.yaml  inception_v4.yaml  squeezenet.yaml  yolo.yaml
src/ros_horned_sungem/horned_sungem_launch/launch/: hs_classification_example.launch
src/ros_horned_sungem/horned_sungem_lib/: CMakeLists.txt  package.xml
src/ros_horned_sungem/horned_sungem_lib/include/horned_sungem_lib/: connect.h  graph.h  hs_cpp.h  hs_manager.h  result.h  tensor.h
src/ros_horned_sungem/horned_sungem_lib/src/: connect.cpp  device.cpp  exception_util.cpp  graph.cpp  hs_manager.cpp  result.cpp
src/ros_horned_sungem/horned_sungem_stream/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/ros_horned_sungem/horned_sungem_stream/include/horned_sungem_stream/: hs_nodelet.h
src/ros_horned_sungem/horned_sungem_stream/src/: hs_nodelet.cpp
